[gd_scene load_steps=40 format=3 uid="uid://b6h6uy02l64em"]

[ext_resource type="Script" path="res://Scripts/Entite/Player.gd" id="1_sdugo"]
[ext_resource type="Texture2D" uid="uid://c4bs5tss20lup" path="res://Art/sprite sheet.png" id="2_30ysn"]
[ext_resource type="Texture2D" uid="uid://cj358tyc3iqay" path="res://Art/Player.png" id="2_l8eut"]

[sub_resource type="AtlasTexture" id="AtlasTexture_m01hr"]
atlas = ExtResource("2_30ysn")
region = Rect2(0, 240, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbxfv"]
atlas = ExtResource("2_30ysn")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_stroe"]
atlas = ExtResource("2_30ysn")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2qvp"]
atlas = ExtResource("2_30ysn")
region = Rect2(40, 200, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bf343"]
atlas = ExtResource("2_30ysn")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bthlh"]
atlas = ExtResource("2_30ysn")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_spvn8"]
atlas = ExtResource("2_30ysn")
region = Rect2(80, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xkyj3"]
atlas = ExtResource("2_30ysn")
region = Rect2(120, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu4ml"]
atlas = ExtResource("2_30ysn")
region = Rect2(160, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4swn"]
atlas = ExtResource("2_30ysn")
region = Rect2(200, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fulr8"]
atlas = ExtResource("2_30ysn")
region = Rect2(240, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw45t"]
atlas = ExtResource("2_30ysn")
region = Rect2(280, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8ql3"]
atlas = ExtResource("2_30ysn")
region = Rect2(320, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_41vus"]
atlas = ExtResource("2_30ysn")
region = Rect2(360, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_svg40"]
atlas = ExtResource("2_30ysn")
region = Rect2(0, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6bwm"]
atlas = ExtResource("2_30ysn")
region = Rect2(40, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5ldi"]
atlas = ExtResource("2_30ysn")
region = Rect2(80, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0p25"]
atlas = ExtResource("2_30ysn")
region = Rect2(120, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_m64jb"]
atlas = ExtResource("2_30ysn")
region = Rect2(160, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_inibd"]
atlas = ExtResource("2_30ysn")
region = Rect2(200, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgcx3"]
atlas = ExtResource("2_30ysn")
region = Rect2(240, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6f7o"]
atlas = ExtResource("2_30ysn")
region = Rect2(280, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1hgk"]
atlas = ExtResource("2_30ysn")
region = Rect2(320, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jylna"]
atlas = ExtResource("2_30ysn")
region = Rect2(360, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_m78oj"]
atlas = ExtResource("2_30ysn")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rav0a"]
atlas = ExtResource("2_30ysn")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4e8m1"]
atlas = ExtResource("2_30ysn")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljk05"]
atlas = ExtResource("2_30ysn")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewj57"]
atlas = ExtResource("2_30ysn")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dj1c"]
atlas = ExtResource("2_30ysn")
region = Rect2(280, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ls6u"]
atlas = ExtResource("2_30ysn")
region = Rect2(320, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3wfi"]
atlas = ExtResource("2_30ysn")
region = Rect2(360, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwfiy"]
atlas = ExtResource("2_30ysn")
region = Rect2(0, 200, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_fuoj5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m01hr")
}],
"loop": true,
"name": &"acrochage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbxfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_stroe")
}],
"loop": false,
"name": &"debut_marche",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2qvp")
}],
"loop": true,
"name": &"descente",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bf343")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bthlh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spvn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xkyj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu4ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4swn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fulr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw45t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8ql3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41vus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svg40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6bwm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5ldi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0p25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m64jb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_inibd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgcx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6f7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1hgk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jylna")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m78oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rav0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4e8m1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljk05")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewj57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5dj1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ls6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3wfi")
}],
"loop": true,
"name": &"marche",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwfiy")
}],
"loop": true,
"name": &"saut",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c4452"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xc2g6"]
size = Vector2(40, 40)

[node name="CharacterBody2D" type="CharacterBody2D" groups=["Joueurs"]]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_sdugo")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fuoj5")
animation = &"acrochage"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_c4452")

[node name="Personnage" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_l8eut")

[node name="BounceRayCasts" type="Node2D" parent="."]

[node name="RayCast2D3" type="RayCast2D" parent="BounceRayCasts"]
position = Vector2(19, 20)
target_position = Vector2(0, 4)
collision_mask = 8
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="BounceRayCasts"]
position = Vector2(-19, 20)
target_position = Vector2(0, 4)
collision_mask = 8
collide_with_areas = true

[node name="RayCast2D" type="RayCast2D" parent="BounceRayCasts"]
position = Vector2(0, 20)
target_position = Vector2(0, 4)
collision_mask = 8
collide_with_areas = true

[node name="Hitbox" type="Area2D" parent="."]
collision_mask = 22

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_xc2g6")

[node name="TimerWings" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="TimerWings" to="." method="_on_timer_timeout"]
